# cardreader

./: CMakeLists.txt  README.md  buildFH.bat  builddllFH.bat
client_test/: CMakeLists.txt  build_fh.bat  card_crt.lib  cardreader.cpp  cardreader.h  main.cpp
client_test/buildx86/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  card_crt.lib  cmake_install.cmake  compile_commands.json
client_test/buildx86/testui_autogen/: deps  mocs_compilation.cpp
client_test/buildx86/testui_autogen/EWIEGA46WW/: moc_cardreader.cpp  moc_cardreader.cpp.d
httplib/: CMakeLists.txt  clienthttp.cpp  clienthttp.h  commonws.h  networkcurl.cpp  networkcurl.h
libs/: CRT_310N.h  CRT_310N.lib  CRT_310_NR01.lib
rpc_card/: CMakeLists.txt  card.grpc.pb.cc  card.grpc.pb.h  card.pb.cc  card.pb.h  card.proto  gen.bat  genFH.bat
rpc_main/: CMakeLists.txt  configparser.h  main.cpp  param.json  server.cpp  server.h
src/: CMakeLists.txt  main.cpp  serial_command_cr.cpp  serial_command_cr.h  utilfunc.cpp  utilfunc.h
src_test/: CMakeLists.txt  main.cpp  serial_command_cr.h  utilfunc.cpp  utilfunc.h
